SFDC Automation/src/objects/OSF_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>ID__c</fullName>
        <displayFormat>{000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>OSF_Assigned_to__c</fullName>
        <label>OSF Assigned to</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_Reports_to__c</fullName>
        <label>OSF Reports to</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>OSF Assignment</label>
    <nameField>
        <label>OSF Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OSF Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>